# hf-info

./: .gitignore  pyproject.toml
src/hfinfo/: __init__.py
src/hfinfo/cmd/hfinfo/: __init__.py
